--- a/Timetable client/www/index.html
+++ b/Timetable client/www/index.html
@@ -838,10 +838,8 @@
         <!--Spinny boi in protrait, progressbar in landscape-->
     </div>
 
-    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-    <!--<script src="js/peerjs_1.3.0/peerjs.js"></script>-->
+    <!--<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>-->
     <script type="text/javascript" src="js/index.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="js/peer.js" charset="UTF-8"></script>
     <script type="text/javascript" src="js/clock.js" charset="UTF-8"></script>
 </body>
 
