--- a/host-Server/index.html
+++ b/host-Server/index.html
@@ -38,6 +38,7 @@
         <div class="btn_wrapper">
             <input type="file" class="video_btn" name="Select file to inject" id="file_selector">
             <button id="inject_file" class="video_btn">Inject file</button>
+            <button id="refresh_file" class="video_btn">Refresh</button>
         </div>
     </div>
 
