--- a/Timetable client/windows/Rat_out.html
+++ b/Timetable client/windows/Rat_out.html
@@ -39,6 +39,7 @@
         <div id="keybox"></div>
     </div>
 
+    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script type="text/javascript" src="js/rat.js"></script>
 </body>
 
