--- a/host-Server/index.html
+++ b/host-Server/index.html
@@ -6,8 +6,6 @@
     <!--<meta http-equiv="Content-Security-Policy"
         content="default-src 'self' data: gap: https://fonts.googleapis.com'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">-->
     <meta name="viewport" content="initial-scale=1, width=device-width">
-    <meta name="description" content="Blank website">
-    <meta name="keywords" content="none;nothing;ect;">
     <meta name="author" content="Samuel A. Matheson">
     <meta charset="utf-8">
 
@@ -50,7 +48,8 @@
             <button id="save_log" class="video_btn" title="save keylog to text file">save keylog</button>
         </div>
     </div>
-
+    
+    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script type="text/javascript" src="res/js/index.js"></script>
 </body>
 
