--- a/host-Server/index.html
+++ b/host-Server/index.html
@@ -40,6 +40,7 @@
                 <input type="submit" class="video_btn" form="form1" value="Inject file" style=""></input>
             </form>
             <button id="refresh_file" class="video_btn">Refresh</button>
+            <a class="video_btn" id="downloadbtn" href="temp/packae.json" style="display: none;" download></a>
         </div>
     </div>
 
