fixed some things

--- a/Timetable client/windows/Rat_out.html
+++ b/Timetable client/windows/Rat_out.html
@@ -18,6 +18,7 @@
 
 <body>
     <!-- Webcam controls -->
+    this page is for testing
     <div class="view" id="webcam_view">
         <div class="title">Webcam</div>
         <video autoplay="true" id="webcam_preview"></video>
